fix: migrate remaining MockMailbox calls to getMailMessagesSentTo()
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>